--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -6,6 +6,8 @@ server:
     include-binding-errors: always
 
 spring:
+  application:
+    name: ACCOUNT-SERVICE
   datasource:
     password: password
     url: jdbc:postgresql://localhost:5432/account_db
@@ -19,7 +21,17 @@ spring:
         format_sql: true
     show-sql: true
 
+
 logging:
   level:
     org.springframework.web: DEBUG
 
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    hostname: localhost
