--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -7,6 +7,8 @@ server:
     include-binding-errors: always
 
 spring:
+  application:
+    name: NOTIFICATION-SERVICE
   datasource:
     password: password
     url: jdbc:postgresql://localhost:5432/notification_db
@@ -22,8 +24,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: winijay2@gmail.com
-    password: ryrefgvkvtsqrvzz
+    username: springapp4@gmail.com
+    password: ozywhkxoprvdrwfg
     properties:
       mail:
         smtp:
@@ -31,6 +33,14 @@ spring:
           starttls:
             enable: true
 
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    hostname: localhost
 
 
 logging:
