--- a/transaction/src/main/resources/application.yml
+++ b/transaction/src/main/resources/application.yml
@@ -7,6 +7,8 @@ server:
     include-binding-errors: always
 
 spring:
+  application:
+    name: TRANSACTION-SERVICE
   datasource:
     password: password
     url: jdbc:postgresql://localhost:5432/transaction_db
@@ -19,6 +21,15 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    hostname: localhost
 
 logging:
   level:
