--- a/notification/src/main/resources/application.yml
+++ b/notification/src/main/resources/application.yml
@@ -7,8 +7,6 @@ server:
     include-binding-errors: always
 
 spring:
-  application:
-    name: NOTIFICATION-SERVICE
   datasource:
     password: password
     url: jdbc:postgresql://localhost:5432/notification_db
@@ -24,8 +22,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: springapp4@gmail.com
-    password: ozywhkxoprvdrwfg
+    username: winijay2@gmail.com
+    password: ryrefgvkvtsqrvzz
     properties:
       mail:
         smtp:
@@ -33,14 +31,6 @@ spring:
           starttls:
             enable: true
 
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-  instance:
-    hostname: localhost
 
 
 logging:
