--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -6,6 +6,8 @@ server:
     include-binding-errors: always
 
 spring:
+  application:
+    name: ACCOUNT-SERVICE
   datasource:
     password: password
     url: jdbc:postgresql://localhost:5432/account_db
@@ -18,6 +20,16 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      default-zone: http://localhost:8761/eureka/
+  instance:
+    hostname: localhost
+
 
 logging:
   level:
