--- a/account/src/main/resources/application.yml
+++ b/account/src/main/resources/application.yml
@@ -21,17 +21,34 @@ spring:
         format_sql: true
     show-sql: true
 
-eureka:
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      default-zone: http://localhost:8761/eureka/
-  instance:
-    hostname: localhost
-
 
 logging:
   level:
     org.springframework.web: DEBUG
+
+#management:
+#  health:
+#    circuitbreakers:
+#      enabled: true
+#  endpoints:
+#    web:
+#      exposure:
+#        include: health
+#  endpoint:
+#    health:
+#      show-details: always
+#
+#resilience4j.circuitbreaker:
+#  instances:
+#    account:
+#      registerHealthIndicator: true
+#      eventConsumerBufferSize: 10
+#      failureRateThreshold: 50
+#      minimumNumberOfCalls: 5
+#      automaticTransitionFromOpenToHalfOpenEnabled: true
+#      waitDurationInOpenState: 5s
+#      permittedNumberOfCallsInHalfOpenState: 3
+#      slidingWindowSize: 50
+#      slidingWindowType: COUNT_BASED
+
 
