--- a/transaction/src/main/resources/bootstrap.yml
+++ b/transaction/src/main/resources/bootstrap.yml
@@ -3,3 +3,9 @@ spring:
     config:
       enabled: true
       uri: http://localhost:9296
+
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8084/realms/spring-boot-microservices-realm
