--- a/account/src/main/resources/bootstrap.yml
+++ b/account/src/main/resources/bootstrap.yml
@@ -4,8 +4,8 @@ spring:
       enabled: true
       uri: http://localhost:9296
 
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://localhost:8084/realms/spring-boot-microservices-realm
+#  security:
+#    oauth2:
+#      resourceserver:
+#        jwt:
+#          issuer-uri: http://localhost:8084/realms/spring-boot-microservices-realm
